Add tests for -XX and mutiple -D